<resources>
    <!--Font Family-->
    <string name="ff_regular">sans-serif</string>
    <string name="ff_medium">sans-serif-medium</string>

    <string name="app_name">Кравченко Марина</string>
    <string name="default_count">5</string>
    <string name="rating">Рейтинг</string>
    <string name="code_lines">Написано строк кода</string>
    <string name="projects">Проектов</string>
    <string name="phone_hint">Мобильный</string>
    <string name="phone">+38(066)9699060</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="email">marina_kravchenko@yahoo.com</string>
    <string name="vk_hint">Профиль в Vk</string>
    <string name="vk_profile">id44278913</string>
    <string name="repository_hint">Репозиторий</string>
    <string name="repository">Jellydroid</string>
    <string name="about_me_hint">О себе</string>
    <string name="about_me">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="user_profile_placeholder_image">Изменить фотографию профиля</string>
    <string name="user_profile_dialog_gallery">Загрузить из галлереи</string>
    <string name="user_profile_dialog_camera">Сделать фото</string>
    <string name="user_profile_dialog_cancel">Отмена</string>
    <string name="user_profile_dialog_title">Изменить фотографию профиля</string>
    <string name="user_profile_choose_message">выберите фото</string>
    <string name="user_header_name">Марина Кравченко</string>
    <string name="user_header_email">marina_kravchenko@yahoo.com</string>

    <!--Auth Activity-->
    <string name="auth.authorization_enter">ВОЙТИ</string>
    <string name="auth.email">E-mail</string>
    <string name="auth.password">Пароль</string>
    <string name="auth.login">Войти</string>
    <string name="auth.remember">Забыли пароль?</string>
</resources>
